...
  const styles = React.useMemo(() => getStyles(theme), [theme]);
  const [isThemeDark] = useMMKVBoolean(Keys.THEME_MODE);
  const { imageSource, onPress, title, edit = false } = props;

  return (
    <View style={styles.wrapper}>
      <AppTouchable onPress={onPress} testID='btn_edit_wallet_pic'>
        {!imageSource ? (
          <View style={styles.container}>
            <View style={styles.iconImageWrapper}>
              {isThemeDark ? (
                <IconImage height={200} width={200} />
              ) : (
...
