...
        <View style={styles.inputWrapper}>
          <TextField
            value={assetName}
            onChangeText={onChangeName}
            placeholder={home.assetName}
            keyboardType={'default'}
            // returnKeyType={'done'}
            // onSubmitEditing={primaryOnPress}
          />
        </View>
        <View style={styles.inputWrapper}>
          <TextField
            value={assetTicker}
...
