...

  getBitcoinNetwork() {
    return config.NETWORK_TYPE;
  }

  async setupNewApp({
    appName = "Satoshi's Palette",
    pinMethod = PinMethod.DEFAULT,
    passcode = '',
    walletImage = null,
    mnemonic = null,
    appType,
    rgbNodeConnectParams,
...
